# vol-surface-lab

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/vol_surface_lab/: __init__.py  config.py  csv_io.py  main.py  models.py  routers.py  store.py  surface.py
backend/tests/: __init__.py  test_api.py  test_csv_io.py  test_surface_synthetic.py
docs/: README_QUANT.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: SurfaceCharts.tsx  globals.css  layout.tsx  page.tsx
